# my_repos_check

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/repo_check/: __init__.py  cli.py
tests/: test_cli.py
