[project]
name = "repo-check"
version = "0.1.0"
description = "Check git status for immediate subfolders of a target directory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kevin M" }
]
keywords = ["git", "cli", "status", "repository"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[project.scripts]
repo-check = "repo_check.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
